	* toolchain/gcc/3.3.6 - Added a patch to fixed compilation error on Ubuntu
	  9.10.
	* toolchain/nxflat/Makefile - Correct static library link order.
	* configs/arm920t-defconfig-4.3.3 - Enable support for NXFLAT tools.
	* toolchain/binutils/2.21 and toolchain/gcc/4.5.2 - Add support for GCC
	  4.5.2 with binutils 2.21.
	* configs/arm920t-eabi-defconfig-4.5.2 - Add a configuration to build a
	  GCC 4.5.2 EABI ARM toolchain for the ARM920t.

buildroot-1.11 2011-11-05 <gnutt@nuttx.org>

	* configs/avr-defconfig-4.3.3 - Added --enable-long-long as a GCC
	  option.
	* configs/avr-defconfig-4.5.2 - New configuration.
	* Config.in and almost all configurations in configs/ - Changed the
	  default nuttx path to $(TOPDIR)/../../nuttx
	* Misc files.  Patch provided by Gerd v. Egidy that solves the following
	  problems
	  - binutils 2.21 is not available on the gnu servers anymore, they replaced
	    it with 2.21.1
	  - there is some assembler error when compiling gcc for arm, gcc bugzilla
	    43999
	  - you can't build nuttx for cortex m3/m4 because of a missing instruction
	    in the assembler, binutils bugzilla 12296
	* Add support for binutils 2.22 and GCC 4.6.3.
	* Change name of all tools from xxx-elf to xxx-nuttx-elf
	* Added an ARM EABI GCC 4.6.3 configuration (tool name is arm-nuttx-eabi-).
	* ldnxflat: Add support for the R_ARM_REL32 relocation.  This relocation
	  type was not generated by GCC/LD prior to gcc-4.6.3
	* R_ARM_REL32 logic is conditionally disabled because it has not been
	  tested.
	* ldnxflat: Correct a memory allocation error that could cause written
	  past the end of allocated memory.  Partial restoration of R_ARM_REL32
	  logic.  There are lots of issues that I still do not understand here.

buildroot-1.12 2013-03-15 <gnutt@nuttx.org>

	* Fix typo toolchain/gdb/Config.in that prevented GDB 7.4 from building
	  (from Ken Bannister).
	* Add support for a Cortex-M0 toolchain based on GCC 4.6.3.

buildroot-1.13 2011-xx-xx <gnutt@nuttx.org>
