@@ -135,3 +135,7 @@ buildroot-1.12 2013-03-15 <gnutt@nuttx.org>
 
 buildroot-1.13 2011-xx-xx <gnutt@nuttx.org>
 
+	* Ubuntu's HOSTCC prints 'gcc-Version 4.6.3' but dependencies.sh expects
+	  'gcc version 4.6.3'.  This changes solves the issue, but should be
+	  revisited at some time.  From Oliver Riesener (2013-12-12).
+
